--- a/pom.xml
+++ b/pom.xml
@@ -156,12 +156,12 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit-engine.version}</version>
-      <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.junit.jupiter</groupId>-->
+      <!--<artifactId>junit-jupiter-api</artifactId>-->
+      <!--<version>${junit-engine.version}</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
 
     <dependency>
       <groupId>org.jboss.byteman</groupId>
@@ -324,13 +324,13 @@
             </property>
           </systemProperties>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit-engine.version}</version>
-          </dependency>
-        </dependencies>
+        <!--<dependencies>-->
+          <!--<dependency>-->
+            <!--<groupId>org.junit.vintage</groupId>-->
+            <!--<artifactId>junit-vintage-engine</artifactId>-->
+            <!--<version>${junit-engine.version}</version>-->
+          <!--</dependency>-->
+        <!--</dependencies>-->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
